freemed project changelog
($Id$)

* Wed Feb 07 2001 rufustfirefly
  - cleaning up modules/payment.module.php a little in the addform section
    to have nbsp;'s for proper rendering

* Wed Feb 07 2001 fforest
    more bug fixes like previously. mostly global variable issues
    $db_name to this->table_name etc.
    added the new payment module to cvs. 
	
* Fri Feb 02 2001 fforest
	mostly bug fixes. things needing $sql as global
    html_form::, $this->table_name etc.
	a few more bug fixes like above at 4:43pm est 

* Fri Jan 26 2001 rufustfirefly
  - added fix for null icons in phpwebtools module class (external)
  - added modules/patient_demographic_report.module.php as a test of the
    report system

* Fri Jan 26 2001 fforest
  - auth module needed to use authdtadd for add and authdtmod for mod
      also fixed patient id so records added did not have 0 patient.
  - manage_bills needed ptocdtbilled. (bug by me from last commit)

* Thu Jan 25 2001 rufustfirefly
  - fixed procedure module to pass "module" variable in wizard
  - added includes to billing functions modules so that the module loader
    doesn't complain
  - scope fixes in modules/authorizations.module.php in add
  - moved help.php3 -> help.php
  - added reports category, icon and module loader, and frame for class
  - added doc/ directory, moved much documentation from root of tree
  - moved img/index.php3 -> img/index.php
  - added img/magnify.gif and "Module Information" to admin module
  - silly typo removed in user module
  - added module_information.php, and updated phpwebtools with extra fields,
    etc
  - default MODULE_AUTHOR in lib/module.php
  - fixed logout to have proper define usage
  - fixed authenticate to be nicely parsed and proper

* Wed Jan 24 2001 fforest
  - admin.php added procdtbilled to procrec
  - genereate_fixed_forms.php fix bug in insurance validation
      re arranged code to allow a new bill to be generated when a procs eoc or auth